<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/top_add"
        android:visible="false"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="always"
        android:title="@string/top_action_bar_plus_action" />

	<item
		android:id="@+id/action_save"
		android:title="@string/save"
		android:icon="@android:drawable/ic_menu_save"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_edit"
		android:title="@string/edit"
		android:icon="@android:drawable/ic_menu_edit"
		app:showAsAction="ifRoom" />

	<item
			android:id="@+id/moreVertical"
			android:icon="@drawable/ic_more_vert_24px"
		android:title="@string/topToolbar_action_more_vertical"
		app:showAsAction="ifRoom" >

			<menu>
				<item
					android:id="@+id/hideArchived"
					android:title="@string/topToolbar_hide_archived"
					android:checkable="true"
					android:checked="true"
					/>

				<item
					android:id="@+id/action_settings"
					android:icon="@android:drawable/ic_menu_preferences"
					app:showAsAction="ifRoom"
					android:title="@string/topToolbar_settings" />

			</menu>

		</item>

</menu>
