<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<EditText
		android:id="@+id/customFrequencyTimesEditText"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:background="@android:color/transparent"
		android:inputType="number"
		android:text="@string/customFrequencyPickerDefaultTimesValue"
		android:layout_marginStart="10dp"
		android:hint="0000"
		android:textSize="16sp"
		android:textColorHint="#00FFFFFF"
		android:maxLength="4"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:importantForAutofill="no" />

	<TextView
		android:id="@+id/customFrequencyTimesLabel"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:textSize="16sp"
		android:text="@string/customFrequencyPickerTimesLabel"
		android:layout_marginStart="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/customFrequencyTimesEditText"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/customFrequencyDaysEditText"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:hint="0000"
		android:textColorHint="#00FFFFFF"
		android:maxLength="4"
		android:textSize="16sp"
		android:background="@android:color/transparent"
		android:inputType="number"
		android:text="@string/customFrequenyPickerDaysValue"
		app:layout_constraintStart_toEndOf="@+id/customFrequencyTimesLabel"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:importantForAutofill="no"
	/>

	<TextView
		android:id="@+id/customFrequencyDaysLabel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/customFrequencyPickerDaysLabel"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintStart_toEndOf="@+id/customFrequencyDaysEditText"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
