<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:context=".LoginFragment" >

			<TextView
				android:id="@+id/loginHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/login_header_sign_in"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<ImageView
				android:id="@+id/logo"
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_marginTop="24dp"
				android:contentDescription="@string/tour_logo_image_description"
				android:src="@android:drawable/ic_menu_rotate"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.498"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/loginHeader" />

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/login_input_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:hint="@string/login_user_name_hint"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/logo">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/login_input_field"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:autofillHints="username"
					android:background="@android:color/transparent"
					android:inputType="textNoSuggestions"
					tools:targetApi="o" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/password_input_layout"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:hint="@string/login_password_hint"
				app:endIconMode="password_toggle"
				app:errorIconDrawable="@null"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/login_input_layout">

				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password_input_field"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:autofillHints="password"
					android:background="@android:color/transparent"
					android:inputType="textPassword"
					tools:targetApi="o" />

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/login_sign_in_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="12dp"
				android:layout_marginTop="8dp"
				android:layout_marginEnd="12dp"
				android:text="@string/login_button_sign_in"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

			<TextView
				android:id="@+id/login_sign_up_hint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/login_sign_up_hint"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/login_sign_in_button" />

			<TextView
				android:id="@+id/login_sign_up_link"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:text="@string/login_sign_up_link"
				android:textAppearance="@style/TextAppearance.AppCompat.Small"
				app:layout_constraintStart_toEndOf="@+id/login_sign_up_hint"
				app:layout_constraintTop_toBottomOf="@+id/login_sign_in_button" />

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

</layout>
